# ProfileCurves_CAVE

./: .gitignore  CGITechniques.md  CMakeLists.txt  Design.md  Math.md  README.md
include/: ControlPoints.h  Mesh.h  NGLScene.h
shaders/: ColourFragment.glsl  ColourVertex.glsl  CurveFragment.glsl  CurveGeometry.glsl  CurveVertex.glsl
src/: ControlPoints.cpp  Mesh.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  main.cpp
tests/: ControlPointsTests.cpp  MeshTests.cpp
